# clinicus-ai

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  reqiurements.txt  requirements.txt  test_openai.py
app/: __init__.py  main.py
app/api/: fastapi_backend.py
app/config/: settings.py
app/models/: audio_analyzer.py  diagnosis_engine.py  text_analyzer.py  video_analyzer.py
app/utils/: conversation_manager.py  openai_client.py
scripts/: run_fastapi.py  run_streamlit.py
