[project]
name = "clinicusai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "librosa>=0.10.1,<1.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "mediapipe>=0.10.0,<1.0.0",
    "numpy>=1.24.3,<2.0.0",
    "openai>=1.3.0,<2.0.0",
    "opencv-python>=4.8.1.78,<5.0.0",
    "pandas>=2.0.3,<3.0.0",
    "pillow>=10.0.1,<11.0.0",
    "plotly>=5.17.0,<6.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.0.3,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.1,<2.0.0",
    "seaborn>=0.12.2,<1.0.0",
    "soundfile>=0.12.1,<1.0.0",
    "streamlit>=1.29.0,<2.0.0",
    "streamlit-webrtc>=0.47.1,<1.0.0",
    "torch>=2.1.0,<3.0.0",
    "torchaudio>=2.1.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "websockets>=12.0,<13.0",
]

[dependency-groups]
dev = [
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pytest>=7.4.3,<8.0.0",
]
