[project]
name = "clinicusai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "librosa>=0.10.1",
    "matplotlib>=3.7.1",
    "mediapipe>=0.10.0",
    "numpy>=1.24.3",
    "openai>=1.3.0",
    "opencv-python>=4.8.1.78",
    "pandas>=2.0.3",
    "pillow>=10.0.1",
    "plotly>=5.17.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.1",
    "seaborn>=0.12.2",
    "soundfile>=0.12.1",
    "streamlit>=1.29.0",
    "streamlit-webrtc>=0.47.1,<1.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
    "typing-extensions>=4.8.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pytest>=7.4.3,<8.0.0",
]
